--- a/app/src/main/res/layout/fragment_search_artist.xml
+++ b/app/src/main/res/layout/fragment_search_artist.xml
@@ -1,53 +1,52 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
+    tools:context=".MainActivityFragment">
 
-
-    <LinearLayout
-        android:orientation="vertical"
+    <SearchView
+        android:id="@+id/query_editText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center" >
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:iconifiedByDefault="false"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:queryHint="@string/edittext_search_hint"
+        android:singleLine="true" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/query_editText"
-            android:layout_gravity="center_horizontal"
-            android:inputType="text"
-            android:singleLine="true"
-            android:hint="@string/edittext_search_hint"
-            android:imeOptions="actionSearch"/>
+    <TextView
+        android:id="@+id/message_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/textview_vertical_margin"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:visibility="gone" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/message_textView"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/textview_vertical_margin"  android:visibility="gone"/>
+    <ProgressBar
+        android:id="@+id/loadingSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/textview_vertical_margin"
+        android:visibility="gone" />
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/loadingSpinner"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/textview_vertical_margin" android:visibility="gone" />
+    <ListView
+        android:id="@+id/results_listView"
+        style="@style/SearchListStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/results_listView"
-            />
-
-    </LinearLayout>
-</FrameLayout>
+</LinearLayout>
