--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -5,7 +5,7 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
-
+    android:background="@drawable/item_selector"
     android:padding="@dimen/list_item_padding"
     android:layout_marginTop="@dimen/list_item_margin"
     android:layout_marginBottom="@dimen/list_item_margin">
