--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -11,4 +12,8 @@
     <dimen name="label_margin_left">5dp</dimen>
     <dimen name="list_item_margin">10dp</dimen>
     <dimen name="list_item_padding">5dp</dimen>
+
+
+    <dimen name="player_button_padding">20dp</dimen>
+    <dimen name="player_labels_padding">2dp</dimen>
 </resources>
