--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,16 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryDark">@color/dark_green</item>
-    </style>
-    <!-- Settings activity theme. -->
-    <style name="SettingsTheme" parent="AppTheme"></style>
 
+
+    </style>
+
+
+    <!-- Settings activity theme. -->
+    <style name="SettingsTheme" parent="AppTheme"/>
+
+    <style name="DialogWhenLarge" parent="AppTheme"/>
+
+    <style name="SearchListStyle"/>
 
 </resources>
